<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".fragments.PledgeFragment"
android:background="@drawable/background"
android:orientation="vertical"
android:paddingTop="5dp">

    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/logo"/>

    <TextView
        android:paddingTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pledge"
        android:layout_gravity="center"
        android:textColor="#000000"
        android:textStyle="bold"
        android:textSize="18dp" />

    <RadioGroup
        android:id="@+id/pledge_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingTop="10dp">

        <RadioButton
            android:id="@+id/pledge3"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:textSize="20dp"
            android:textStyle="bold"
            android:text="@string/pledge_radio_button_3"
            android:textColor="@color/themeGreen"
            android:buttonTint="@color/themeGreen"/>

        <RadioButton
            android:id="@+id/pledge2"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:textSize="20dp"
            android:textStyle="bold"
            android:text="@string/pledge_radio_button_2"
            android:textColor="@color/themeGreen"
            android:buttonTint="@color/themeGreen"/>

        <RadioButton
            android:id="@+id/pledge1"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:textSize="20dp"
            android:textStyle="bold"
            android:text="@string/pledge_radio_button_1"
            android:textColor="@color/themeGreen"
            android:buttonTint="@color/themeGreen"/>

        <RadioButton
            android:id="@+id/pledge0"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:textSize="20dp"
            android:textStyle="bold"
            android:text="@string/pledge_radio_button_0"
            android:textColor="@color/themeGreen"
            android:buttonTint="@color/themeGreen" />
    </RadioGroup>

    <Button
        style="@style/NiceButton"
        android:id="@+id/pledge_button"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/pledge_button_text"
        android:layout_gravity="center"/>
</LinearLayout>


    <TextView
        android:id="@+id/treeHeading"
        style="@style/GreenHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:text="@string/trees_save"
        app:layout_constraintStart_toEndOf="@+id/treesSaved"
        app:layout_constraintTop_toBottomOf="@+id/vancouverText2" />

    <TextView
        android:id="@+id/treesSaved"
        style="@style/GreenHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vancouverText2" />

    <ImageButton
        android:id="@+id/facebookShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/ic_share"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/treeHeading"
        app:layout_constraintTop_toBottomOf="@+id/vancouverText2" />

</android.support.constraint.ConstraintLayout>