<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/community_progress_bar"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="20dp"
        android:background="@drawable/background">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="30dp">
            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/logo"
                android:layout_gravity="center" />
            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center">
                <TextView
                    android:paddingTop="10dp"
                    android:textSize="25dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/our_community"
                    android:layout_gravity="center"
                    android:textColor="@color/themeGreen" />
                <TextView
                    android:paddingTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/city_filter"
                    android:textColor="#000000"
                    android:layout_gravity="right"
                    android:paddingRight="80dp"/>
                <Spinner
                    android:id="@+id/community_cityList"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:entries="@array/city_array"
                    android:layout_gravity="right"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="30dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">
            <TextView
                android:textSize="22dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/participants_text"
                android:textColor="@color/themeGreen" />
            <TextView
                android:id="@+id/community_pledge_participant"
                android:paddingLeft="10dp"
                android:textColor="#000000"
                android:textSize="20dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/participants_number"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingRight="5dp"
            android:paddingLeft="5dp">
            <TextView
                android:textSize="22dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_pledged_text"
                android:textColor="@color/themeGreen"/>
            <TextView
                android:id="@+id/community_pledge_total"
                android:paddingLeft="6dp"
                android:textColor="#000000"
                android:textSize="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/total_pledged_number"/>
            <TextView
                android:paddingLeft="3dp"
                android:textColor="#000000"
                android:textSize="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="kgs"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="40dp">
            <TextView
                android:textSize="18dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trees_planted_text"
                android:textColor="@color/themeGreen"/>
            <TextView
                android:id="@+id/community_pledge_trees"
                android:paddingLeft="10dp"
                android:textColor="#000000"
                android:textSize="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/trees_planted_number"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingBottom="10dp"
            android:paddingLeft="5dp">
            <TextView
                android:textSize="22dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/avg_pledged_text"
                android:textColor="@color/themeGreen"/>
            <TextView
                android:id="@+id/community_pledge_average"
                android:paddingLeft="10dp"
                android:textColor="#000000"
                android:textSize="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/avg_pledged_number"/>
        </LinearLayout>

        <ImageView
            android:id="@+id/about_button_community"
            android:layout_gravity="center"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:src="@drawable/about" />

        <TextView
            android:layout_gravity="center"
            android:paddingTop="10dp"
            android:textSize="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/other_members"
            android:textColor="@color/themeGreen"/>

        <TextView
            android:id="@+id/otherPledge0"
            android:layout_gravity="center"
            android:paddingTop="10dp"
            android:textSize="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />

        <TextView
            android:id="@+id/otherPledge1"
            android:layout_gravity="center"
            android:paddingTop="10dp"
            android:textSize="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />
        <TextView
            android:id="@+id/otherPledge2"
            android:layout_gravity="center"
            android:paddingTop="10dp"
            android:textSize="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />

        <TextView
            android:id="@+id/otherPledge3"
            android:layout_gravity="center"
            android:paddingTop="10dp"
            android:textSize="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />
        <TextView
            android:id="@+id/otherPledge4"
            android:layout_gravity="center"
            android:paddingTop="10dp"
            android:textSize="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />

        <TextView
            android:id="@+id/otherPledge5"
            android:layout_gravity="center"
            android:paddingTop="10dp"
            android:textSize="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />
        <TextView
            android:id="@+id/otherPledge6"
            android:layout_gravity="center"
            android:paddingTop="10dp"
            android:textSize="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />

        <TextView
            android:id="@+id/otherPledge7"
            android:layout_gravity="center"
            android:paddingTop="10dp"
            android:textSize="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />


    </LinearLayout>

</RelativeLayout>